# lean-in

./: .gitignore  .pdm-python  Dockerfile  README.md  launch.py  pyproject.toml  requirements.txt
contrib/: CONTRIBUTING.md
neurons/: miner.py  validator.py
src/lean_net/template/validator/: forward.py  lean_check.py  lean_tools.py  reward.py
template/: __init__.py  protocol.py
template/base/: miner.py  neuron.py  validator.py
template/base/utils/: weight_utils.py
template/utils/: uids.py
template/validator/: forward.py  lean_check.py  lean_net.py  lean_tools.py  reward.py
template/validator/lean_cache/: Main.lean  lake-manifest.json  lakefile.lean
template/validator/lean_cache/.lake/: lakefile.olean  lakefile.olean.trace
