[project]
name = "lean-net"
version = "0.1.0"
description = "lean prover subnet"
authors = [
    {name = "Eternis", email = "*@eternis.ai"},
]
dependencies = [
    "starlette>=0.30.0",
    "pydantic>=2",
    "rich>=13",
    "pytest>=8",
    "numpy>=1",
    "setuptools>=68",
    "bittensor>=8.2.1",
]
requires-python = ">=3.12"
# readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

# [tool.pdm.scripts]
# Install elan if not present
# pre_install = { shell = """
#     if ! command -v elan &> /dev/null; then
#         curl https://raw.githubusercontent.com/leanprover/elan/master/elan-init.sh -sSf | sh -s -- -y
#     fi
#     # Add elan to PATH for next commands
#     export PATH="$HOME/.elan/bin:$PATH"
#     # Install/update lean and lake
#     lake --version || true
# """ }
